# eda-workflow

./: .gitignore  AGENTS.md  README.md  example_usage.py  pyproject.toml
data/: eda_showcase.csv
docs/agents/: domain.md
eda_workflow/: analysis.py  eda_workflow.py  reporting.py  workflow.py
eda_workflow/prompts/: extract_observations_system.md
eda_workflow/templates/: report.html.j2
scripts/: generate_showcase_dataset.py
tests/: conftest.py  test_analysis.py  test_eda_workflow.py  test_reporting.py  test_workflow.py
