[project]
name = "eda-workflow"
version = "0.1.0"
description = "Exploratory Data Analysis workflow for consistent first-pass dataset analysis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.0.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.1.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=8.0.0",
    "ruff>=0.15.13",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
